--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -55,12 +56,13 @@
     "lightgallery": "^2.9.0-beta.1",
     "lucide-react": "^0.446.0",
     "next": "13.5.1",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.53.0",
+    "react-hook-form": "^7.62.0",
     "react-resizable-panels": "^2.1.3",
     "react-scroll": "^1.9.3",
     "recharts": "^2.12.7",
