--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.62.0",
     "react-resizable-panels": "^2.1.3",
     "react-scroll": "^1.9.3",
