--- a/package.json
+++ b/package.json
@@ -64,8 +64,10 @@
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.62.0",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.3",
     "react-scroll": "^1.9.3",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
